@@ -230,7 +230,7 @@ class IndexedRegion extends TransactionalRegion {
        get.addColumn(col);
       }
       
-      Result oldRow = super.get(get, null);
+      Result oldRow = super.get(get, lockid);
       SortedMap<byte[], byte[]> oldColumnValues = convertToValueMap(oldRow);
       
       
@@ -241,7 +241,7 @@ class IndexedRegion extends TransactionalRegion {
       // Handle if there is still a version visible.
       if (delete.getTimeStamp() != HConstants.LATEST_TIMESTAMP) {
         get.setTimeRange(1, delete.getTimeStamp());
-        oldRow = super.get(get, null);
+        oldRow = super.get(get, lockid);
         SortedMap<byte[], byte[]> currentColumnValues = convertToValueMap(oldRow);
         
         for (IndexSpecification indexSpec : getIndexes()) {
